es-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch

spec:
  replicas: 2
  serviceName: elasticsearch
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      name: elasticsearch
      labels:
        app: elasticsearch
        task: final
        es: cluster
    spec:
      containers:
        - image: docker.elastic.co/elasticsearch/elasticsearch:7.1.1
#          env:
#            - name: REDIS_MASTER_HOST
#              valueFrom:
#                configMapKeyRef:
#                  name: redisslaveconfig
#                  key: REDIS_MASTER_HOST
          name: elasticsearch
          ports:
            - containerPort: 9200
