logstash.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: logstash

spec:
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      name: logstash
      labels:
        app: logstash
        task: final
        es: cluster
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:7.2.0
          command: ["logstash","-f","/usr/share/logstash/config/logstash.conf"]
          volumeMounts:
            - name: stashconfigfile
              mountPath: /usr/share/logstash/config/logstash.conf
              subPath: logstash.conf
              readOnly: true
            - name: varlog
              mountPath: /host/log
              readOnly: true
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
            type: Directory
        - name: stashconfigfile
          configMap:
            name: logstash
            items:
              - key: logstash.conf
                path: logstash.conf
