es-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-1
spec:
  type: ClusterIP
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
      name: http
  selector:
    statefulset.kubernetes.io/pod-name: elasticsearch-1
