es-service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-cluster
spec:
  type: ClusterIP
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
      name: http
  selector:
    app: elasticsearch
