kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  type: ClusterIP
  ports:
    - port: 5601
      targetPort: 5601
      protocol: TCP
      name: http
  selector:
    app: kibana
# Deployment kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana

spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      name: kibana
      labels:
        app: kibana
        task: final
        kibana: cluster
    spec:
      containers:
        - image: docker.elastic.co/kibana/kibana:7.2.0
          name: kibana
#          args: ["--logging.verbose", "$(REDIS_MASTER_HOST)" , "6379"]
          ports:
            - containerPort: 5601
