prometheus.yaml

apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: cadvisor
  labels:
    app: prometheus
spec:
  type: ClusterIP
  ports:
    - port: 9090
      name: prom
  selector:
    app: prometheus
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: cadvisor
spec:
  replicas: 1
  serviceName: prometheus
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      name: prometheus
      labels:
        app: prometheus
        task: final
        es: cluster
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.2.1
          #          env:
          #            - name: node.name
          #                valueFrom:
          #                  fieldRef:
          #                    fieldPath: metadata.name
#          envFrom:
#            - configMapRef:
#                name: es-common
          ports:
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name : prometheusconfig
              mountPath: /etc/prometheus
#              subPath: prometheus.yml
            - name : prometheus-storage
              mountPath: /prometheus
      volumes:
        - name: prometheus-storage
          persistentVolumeClaim:
            claimName: prometheus-pvc
        - name: prometheusconfig
          configMap:
            name: prometheus
#            items:
#              - key: prometheus.yml
#                path: prometheus.yml

#            - name: prometheus
#              mountPath: /prometheus
#  volumeClaimTemplates:
#    - metadata:
#        name: prometheus
#      spec:
#        accessModes: [ "ReadWriteOnce" ]
#        resources:
#          requests:
#            storage: 10Gi
#        selector:
#          matchLabels:
#            component: prometheus
