redis-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: http
  selector:
    app: redis-master
