webserver-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP
      name: http
  selector:
    app: webserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver

spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      name: webserver
      labels:
        app: webserver
        task: final
    spec:
      containers:
        - image: quay.io/myafk/interactive:stable
          name: webserver
          command: ["interactive", "ingress"]
          ports:
            - containerPort: 8085
