ingress-common.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webserver
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
#    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: /webserver(/|$)(.*)
            backend:
              serviceName: webserver
              servicePort: 8085
          - path: /getTaskAnswer
            backend:
              serviceName: webserver
              servicePort: 8085
          - path: /es(/|$)(.*)
            backend:
              serviceName: elasticsearch
              servicePort: 9200
          - path: /kibana(/|$)(.*)
            backend:
              serviceName: kibana
              servicePort: 5601
