kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
spec:
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: /kibana
            backend:
              serviceName: kibana
              servicePort: 5601
